# AIAgents_FinalProject_KaggleSolver

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_components.py  test_modules_exec.py
keys/: keys_example.json
src/: config.py  main.py
src/agents/: critic.py  debugger.py  engineer.py  explorer.py  supervisor.py
src/kaggle_solver/: __init__.py  __main__.py  agents.py  cli.py  code_execution.py  data.py  logging_utils.py  orchestrator.py  prompts.py  settings.py  splits.py
src/kaggle_solver/agents/: __init__.py  runtime.py  structured_output.py
src/kaggle_solver/models/: __init__.py  context.py  contracts.py  run.py
src/kaggle_solver/orchestration/: __init__.py  solver.py
src/kaggle_solver/prompts/: __init__.py  registry.py
src/kaggle_solver/rag/: __init__.py  build.py  embedder.py  index.py  loader.py  models.py  retriever.py  tool.py
src/tools/: code_executor.py  data_splits.py  dataset_inputer.py  llm_api_connector.py  submit_best.py
tests/: test_agent_runtime.py  test_agent_tools.py  test_code_execution.py  test_data.py  test_live_model.py  test_orchestrator.py  test_prompt_registry.py  test_rag.py  test_settings.py
